Icon alignment fix, see 6da90af in core

--- a/assets/stylesheets/common/discourse-calendar.scss
+++ b/assets/stylesheets/common/discourse-calendar.scss
@@ -161,6 +161,7 @@
 
 .mention .d-icon {
   margin-left: 0.3em;
+  vertical-align: baseline;
 }
 
 a.holiday {
